# computergraphics-coursework

./: bresenham.py  circledrawing.py  dda.py  ellipsedrawing.py  midpoint.py  pyopenglmodern.py  pyproject.toml  settingup.py  threedtransforms.py  twodtransforms.py
code/: Translation3D.py  bresenham.py  circledrawing.py  dda.py  ellipsedrawing.py  midpoint.py  threedtransforms.py  twodtransforms.py
documents/: CS 38 Yugesh Luitel Lab Report Five.docx  CS 38 Yugesh Luitel Lab Report Four.docx  CS 38 Yugesh Luitel Lab Report One.docx  CS 38 Yugesh Luitel Lab Report Three.docx  CS 38 Yugesh Luitel Lab Report Two.docx
