[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["javaclll <yugu.upadhyaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
PyOpenGL = "^3.1.6"
moderngl = "^5.7.3"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
